--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.7",
+    "copy-webpack-plugin": "^11.0.0",
     "typescript": "^5.0.2"
   }
 }
