--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.7",
     "copy-webpack-plugin": "^11.0.0",
-    "typescript": "^5.0.2",
+    "typescript": "5.2.2",
     "webpack-permissions-plugin": "^1.0.9"
   }
 }
