--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.1",
     "lodash": "^4.17.21",
     "next": "14.0.2",
     "react": "^18",
